--- a/HelloWorld/HelloWorld.Droid/HelloWorld.Droid.csproj
+++ b/HelloWorld/HelloWorld.Droid/HelloWorld.Droid.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SplashActivity.cs" />
+    <Compile Include="MovieInputFragment.cs" />
+    <Compile Include="MovieListActivity.cs" />
+    <Compile Include="MovieListAdapter.cs" />
+    <Compile Include="TabsFragmentPagerAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -105,6 +109,12 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\values\styles.xml" />
     <AndroidResource Include="Resources\drawable-hdpi\Splash.png" />
+    <AndroidResource Include="Resources\layout\layout.axml" />
+    <AndroidResource Include="Resources\layout\MovieInput.axml" />
+    <AndroidResource Include="Resources\layout\MovieListItem.axml" />
+    <AndroidResource Include="Resources\layout\toolbar.axml" />
+    <AndroidResource Include="Resources\values\color.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\Icon2.png" />
   </ItemGroup>
   <Import Project="..\..\MovieDownload\MovieDownload.projitems" Label="Shared" Condition="Exists('..\..\MovieDownload\MovieDownload.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
