--- a/HelloWorld/HelloWorld.Droid/Properties/AndroidManifest.xml
+++ b/HelloWorld/HelloWorld.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="HelloWorld.Droid"></application>
+	<application android:label="HelloWorld.Droid" android:icon="@drawable/icon2"></application>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
