--- a/HelloWorld/HelloWorld.Droid/packages.config
+++ b/HelloWorld/HelloWorld.Droid/packages.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
-  <package id="Square.OkHttp" version="2.4.0.0" targetFramework="monoandroid60" />
-  <package id="Square.OkIO" version="1.5.0.0" targetFramework="monoandroid60" />
-  <package id="Square.Picasso" version="2.5.2.1" targetFramework="monoandroid60" />
-  <package id="TheMovieDbWrapper" version="0.8.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Design" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.4.0.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="MonoAndroid60" />
+  <package id="Square.OkHttp" version="2.7.5.0" targetFramework="monoandroid70" />
+  <package id="Square.OkIO" version="1.10.0.0" targetFramework="monoandroid70" />
+  <package id="Square.Picasso" version="2.5.2.1" targetFramework="MonoAndroid60" />
+  <package id="TheMovieDbWrapper" version="0.8.0" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Compat" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Core.UI" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Design" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Fragment" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v4" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="24.2.1" targetFramework="monoandroid70" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="24.2.1" targetFramework="monoandroid70" />
 </packages>
